# kernel_Lofita

./: .gitignore  README.md  ROADMAP.md  build.sh  build.zig  create_ext2_disk.sh  fix_disk.sh  get_fields.zig  kernel.ld  main.zig  run_simulation.py
.zig-cache/o/07f3df85126baffeb20bf82050f24c25/: lorifa_kernel
.zig-cache/o/4391e658cad86634d6575fc66d424bab/: lorifa_kernel
.zig-cache/o/80d5b215ffe131dbedd09c644b66f44c/: lorifa_kernel
.zig-cache/o/846bbd5b7ed3a0cfdb9bb015a5a69f7d/: lorifa_kernel
.zig-cache/o/9b29913877dbd5735cb85dd6152759fe/: lorifa_kernel
.zig-cache/o/baf000ac7d9dc6f0b08eefe32b66e3b5/: lorifa_kernel
.zig-cache/o/c0432b02d4a0156063edb8cfc9014611/: lorifa_kernel
.zig-cache/o/c9d6b212d46dac0df767e36177f992fc/: lorifa_kernel
.zig-cache/o/f84d16b75fdf41a0b759b8a381e51592/: lorifa_kernel
arch/x86_64/: io.zig
arch/x86_64/kernel/: gdt.zig  idt.zig
arch/x86_64/mm/: paging.zig
boot/: multiboot.s  multiboot.zig
compat/linux/: Cargo.toml
compat/linux/src/: elf_loader.rs  ffi.rs  main.rs
compat/linux/src/syscall/: fs.rs  memory.rs  mod.rs  net.rs  process.rs
drivers/: ata.zig  keyboard.zig  pci.zig  pic.zig  serial.zig  vga.zig
init/: main.zig
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml  rust-toolchain.toml  shell.zig
kernel/src/: capability.rs  compress.rs  driver.rs  elf_loader.rs  ipc.rs  lib.rs  sched.rs  session.rs  token.rs  vasm.rs  vfs.rs  web.rs
kernel/src/fs/: ext2.rs
mm/: ppa.zig
sdk/: Cargo.toml
sdk/src/: lib.rs
